# searchapi

./: .dockerignore  .env  .gitignore  DockerFile.deb  Dockerfile  README.md  __init__.py  main.py  markdown.py  mcp_server.py  pdf.py  pyproject.toml  render.yaml  searchweb.py  setup.py  spider.py  textdata.py  to_txt.py  web_fetch.py  web_text_extract.py
.github/workflows/: build.yml  cleanup.yaml  codeql.yml  gch.yml  plutoploy-deploy.yml
DataOrchestra/: __init__.py  py.typed
DataOrchestra/core/: __init__.py  base.py  cleaner.py  config.py  errors.py  exceptions.py  extractor.py  logging_utils.py  url_utils.py
DataOrchestra/processing/: __init__.py  cache.py  pipeline.py  plugins.py  quality.py  stages.py  strategies.py  to_text.py  unified_processor.py
DataOrchestra/web/: __init__.py  handle_search.py  spider.py
tests/: test_all.py  test_core.py  test_extraction.py  test_integration.py  test_performance.py  test_processing.py  test_processing_comprehensive.py  test_web.py  test_web_scraping.py
