[project]
name = "searchweb"
version = "0.1.0"
description = "A rest api for web search using meta search"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncddgs==0.1.0a1",
    "asyncio==4.0.0",
    "attrs==25.4.0",
    "backoff>=2.2.1",
    "brotli==1.2.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "crossref>=0.1.2",
    "crossrefapi>=1.7.0",
    "ddgs==9.9.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fake-useragent==2.2.0",
    "fastapi==0.121.3",
    "fastapi-cli==0.0.16",
    "fastapi-cloud-cli==0.5.1",
    "fastar==0.6.0",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "primp==0.15.0",
    "propcache==0.4.1",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.16.0",
    "rignore==0.7.6",
    "sentry-sdk==2.45.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "starlette==0.50.0",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "yarl==1.22.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["searchweb", "main"]

[tool.setuptools.package-dir]
"" = "."
